--- a/style.css
+++ b/style.css
@@ -494,5 +494,45 @@ form .send-btn:hover{
     #mein-icon{
         display: block;
     }
+    /* .navlist{
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        width: 255px;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        transition: all ;
+    }
+    .navlist a{
+        display: block;
+        padding: 17px;
+        font-size: 22px;
+    }
 
 }
+@media (max-width: 680px){
+    .main-content p{
+        width:100%;
+
+    }
+}
+@media (max-width: 470px){
+    :root{
+        --h1-font: 3rem;
+        --h2-font: 2.2rem;
+        --p-font: 15px;
+    }
+    .about-img{
+        text-align: center;
+        width: 100%;
+        height: 550px; 
+        max-width: 300px; 
+        border-radius:  50%; 
+        object-fit: cover;        
+        margin: 0 auto; 
+
+
+    }
+} */
